<resources>
    <string name="app_name">HikeLists</string>

    <!-- Menu -->
    <string name="menu_lists">Lists</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_settings">Settings</string>

    <!--  -->
    <string name="weight_gram">%1$d g</string>

    <!-- Predefined categories -->
    <string name="category_backpack">Backpack</string>
    <string name="category_primary">Primary</string>
    <string name="category_secondary">Secondary</string>
    <string name="category_to_sleep">To Sleep</string>
    <string name="category_clothing">Clothing</string>
    <string name="category_all_items">All Items</string>
    <string name="category_not_category">Not categorized</string>
    <string name="edit_item_title_edit">Edit Item</string>
    <string name="edit_item_title_new">New Item</string>

    <string name="edit_item_item_name">Item name:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit_item_category">Category:</string>
    <string name="edit_item_weight">Weight:</string>
    <string name="edit_item_notes">Notes:</string>

    <string name="alert_invalid_weight_title">Invalid weight</string>
    <string name="alert_invalid_weight_empty">Please specify the weight</string>
    <string name="alert_invalid_weight_invalid">Invalid weight input:</string>
    <string name="list_main_list_name">List name:</string>
    <string name="list_name_hint">Enter list name</string>
    <string name="edit_list_title">Edit List</string>
    <string name="list_items_title">Items</string>
    <string name="add_item">Add item</string>
    <string name="remove_item">Remove item</string>

</resources>