<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_list_main_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.tledkov.hikelists.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/list_main_edit_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/list_main_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="@string/edit_list_title"
            app:menu="@menu/menu_edit_list" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/list_main_list_main_edit_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/list_main_edit_app_bar">

        <TextView
            android:id="@+id/list_main_edit_text_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/list_main_list_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_list_main_list_main_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="12"
            android:hint="@string/list_name_hint"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/list_main_edit_items_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/list_items_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/list_main_list_main_edit_name_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_main_edit_items_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/list_main_edit_add_item_fab"
        app:layout_constraintTop_toBottomOf="@id/list_main_edit_items_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/list_main_edit_add_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_item"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
