<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_lists">

    <fragment
        android:id="@+id/navigation_lists"
        android:name="io.github.tledkov.hikelists.ui.lists.ListsFragment"
        android:label="@string/menu_lists"
        tools:layout="@layout/fragment_lists">
        <action
            android:id="@+id/action_navigation_lists_to_editListFragment"
            app:destination="@id/editListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="io.github.tledkov.hikelists.ui.inventory.AllInventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_all_inventory" >
        <action
            android:id="@+id/action_navigation_inventory_to_editItemFragment"
            app:destination="@id/editItemFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.github.tledkov.hikelists.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/editItemFragment"
        android:name="io.github.tledkov.hikelists.ui.inventory.EditItemFragment"
        android:label="EditItemFragment" />

    <fragment
        android:id="@+id/editListFragment"
        android:name="io.github.tledkov.hikelists.ui.lists.EditListFragment"
        android:label="EditListFragment">
        <argument
            android:name="listId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
</navigation>
